Quick fix to layout error with images being stretched out on ./Shop

--- a/src/Components/ShopPage/Product/Product.css
+++ b/src/Components/ShopPage/Product/Product.css
@@ -33,10 +33,8 @@
 #productImages img {
     display: block;
     max-width:100%;
-    max-height:100%;
     width: auto;
     height: auto;
-    min-height: 100%;
 }
 
 .productTitle {
@@ -100,10 +98,11 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100%;
 }
-#mobileImg1 {
+#Img1 {
     scroll-snap-align: start;
 }
-#mobileImg2 {
+#Img2 {
     scroll-snap-align: end;
 }
